fixed restart stuff